--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   app:
-    build: ./
+    #build: ./
+    image: penan9/pythontodo_app
     ports:
       - '5001:5001'
     volumes:
